# oleve-assessment

./: .gitignore  README.md
.cursor/rules/: general-instructions.mdc
backend/: database.py  env.example  main.py  models.py  pyproject.toml
backend/routes/: prompts.py
backend/services/: ai_validation_service.py  pinterest_service.py
docs/: mongodb_schema_and_filtering.md  sample_prompt_runs.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: AgentProgress.tsx  ImageReview.tsx  PromptSubmission.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
